setup faucet for erc20 contracts
