# idea/gear/faucet/swagger.yaml
@@ -4,7 +4,7 @@ info:
   version: 1.1.0
 components:
   schemas:
-    Balance:
+    VaraTestnetRequest:
       type: object
       properties:
         token:
@@ -23,6 +23,22 @@ components:
       required:
         - token
         - payload
+    VaraBridgeRequest:
+      type: object
+      properties:
+        token:
+          type: string
+          description: hCaptcha token
+        address:
+          type: string
+          description: Account address
+        contract:
+          type: string
+          description: Address of the ERC20 contract
+      required:
+        - token
+        - address
+        - contract
 
 paths:
   /balance:
@@ -67,3 +83,19 @@ paths:
           content:
             application/json:
               example: { error: 'InternalError' }
+  /bridge/request:
+    post:
+      summary: Request test tokens on ERC20 contracts used by Vara bridge
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VaraBridgeRequest'
+            example:
+              address: '0x<public_key>'
+              contract: '0x<erc20_address>'
+              token: 'hCaptcha token'
+      responses:
+        '200':
+          description: Request successfully submitted
